--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,10 @@
+whois==0.9.18
+pandas==1.3.5
+keras==2.11.0
 matplotlib==3.5.3
 numpy==1.21.6
 pandas==1.3.5
 seaborn==0.12.1
-session_info==1.0.0
+tensorflow== 2.11.0
+bs4==4.11.1
+whois==0.9.18
